--- a/index.html
+++ b/index.html
@@ -27,41 +27,54 @@
 </body>
 
 <script>
-    var time_number_map = new Map([['01', '08:00 - 09:20'],
-        ['02', '10:00 - 11:20'],
-        ['03', '12:00 - 13:20'],
-        ['04', '14:00 - 15:20'],
-        ['05', '16:00 - 17:20'],
-        ['06', '18:00 - 19:20'],
-        ['07', '20:00 - 21:20'],
-        ['08', '17:00 - 18:20'],
-        ['09', '19:00 - 20:20'],
-        ['10', '21:00 - 22:20'],
-        ['11', '08:00 - 09:00'],
-        ['12', '09:00 - 10:00'],
-        ['13', '10:00 - 11:00'],
-        ['14', '11:00 - 12:00'],
-        ['15', '12:00 - 13:00'],
-        ['16', '13:00 - 14:00'],
-        ['17', '14:00 - 15:00'],
-        ['18', '15:00 - 16:00'],
-        ['19', '16:00 - 17:00'],
-        ['20', '17:00 - 18:00'],
-        ['21', '18:00 - 19:00'],
-        ['22', '19:00 - 20:00'],
-        ['23', '20:00 - 21:00'],
-        ['24', '21:00 - 22:00']]);
-    var C_list=[['11','12','13','15','16','17','18','20','21','22','23','24'],
-        ['01','20','21','22','23','24'],
-        ['01','20','21','22','23','24'],
-        ['11','12','13','15','16','17','18','20','21','22','23','24'],
-        ['11','12','13','14','20','21','22','23','24'],
-        ['01','20','21','22','23','24'],
-        ['11','12','13','14','22','23','24']];
+    // var time_number_map = new Map([['01', '08:00 - 09:20'],
+    //     ['02', '10:00 - 11:20'],
+    //     ['03', '12:00 - 13:20'],
+    //     ['04', '14:00 - 15:20'],
+    //     ['05', '16:00 - 17:20'],
+    //     ['06', '18:00 - 19:20'],
+    //     ['07', '20:00 - 21:20'],
+    //     ['08', '17:00 - 18:20'],
+    //     ['09', '19:00 - 20:20'],
+    //     ['10', '21:00 - 22:20'],
+    //     ['11', '08:00 - 09:00'],
+    //     ['12', '09:00 - 10:00'],
+    //     ['13', '10:00 - 11:00'],
+    //     ['14', '11:00 - 12:00'],
+    //     ['15', '12:00 - 13:00'],
+    //     ['16', '13:00 - 14:00'],
+    //     ['17', '14:00 - 15:00'],
+    //     ['18', '15:00 - 16:00'],
+    //     ['19', '16:00 - 17:00'],
+    //     ['20', '17:00 - 18:00'],
+    //     ['21', '18:00 - 19:00'],
+    //     ['22', '19:00 - 20:00'],
+    //     ['23', '20:00 - 21:00'],
+    //     ['24', '21:00 - 22:00']]);
+    // var C_list=[['11','12','13','15','16','17','18','20','21','22','23','24'],
+    //     ['01','20','21','22','23','24'],
+    //     ['01','20','21','22','23','24'],
+    //     ['11','12','13','15','16','17','18','20','21','22','23','24'],
+    //     ['11','12','13','14','20','21','22','23','24'],
+    //     ['01','20','21','22','23','24'],
+    //     ['11','12','13','14','22','23','24']];
+    var time_number_map = new Map([['01', '08:00 - 09:30'],
+        ['02', '10:30 - 12:00'],
+        ['03', '13:00 - 14:30'],
+        ['04', '15:30 - 17:00'],
+        ['05', '18:00 - 19:30'],
+        ['06', '20:30 - 22:00']]);
+    var C_list=[['01','02','03','04','05','06'],
+        ['01','02','03','04','05','06'],
+        ['01','02','03','04','05','06'],
+        ['01','02','03','04','05','06'],
+        ['01','02','03','04','05','06'],
+        ['01','02','03','04','05','06'],
+        ['01','02','03','04','05','06']];
     var xingqi = (new Date().getDay()+1)%7
 
     function goGymList(){
-        window.location = "https://reservation.bupt.edu.cn/index.php/Wechat/Booking/choose_template/template/2/area_id/5985/"
+        window.location = "https://reservation.bupt.edu.cn/index.php/Wechat/Booking/choose_template/template/1/area_id/5985/"
     }
 
     function changeXingqi(){
@@ -83,6 +96,7 @@
     {
         var timeselect = document.getElementById("timeselect");
         timeselect.length = 0;
+        console.log(xingqi)
         for (const key of C_list[xingqi]) {
             var opt = new Option(time_number_map.get(key),key);
             timeselect.options.add(opt);
@@ -146,7 +160,7 @@
             if(Number(d.getHours())>hour || (Number(d.getHours())>=hour && Number(d.getMinutes())>=minute)){
                 clearInterval(zpInterval)
                 document.getElementById("bbb").disabled=false;
-                console.log("hello")
+                // console.log("hello")
                 window.location = 'https://reservation.bupt.edu.cn/index.php/Wechat/Booking/confirm_booking?area_id=' + area_id + '&td_id=' + reserve_td_ids + '&query_date=' + query_date + "&country_id=0";
             }
         },10)
